--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-        <h1>Bryce's blog</h1>
+        <h1>Obbymaster56472's blog</h1>
 
         <h3>January Posts</h3>
         <ul>
