--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <style>
         #Link-list {
     background:rgb(196, 196, 196);
-          
+    width: 10%      
         }
        
        #Posts {
