--- a/index.html
+++ b/index.html
@@ -54,5 +54,12 @@
         <h2 id='Sixth post'>Sixth post</h2>
         <h4>January 18, 2019</h4>
           <p>Today I have made an account on a code editing program.</p></div>
+      <form>
+        First name:<br>
+  <input type="text" name="firstname" value="Mickey"><br>
+  Last name:<br>
+  <input type="text" name="lastname" value="Mouse"><br><br>
+  <input type="submit" value="Submit">
+</form>
     </body>
 </html>
