--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           <p>Today I have made an account on a code editing program.</p></div>
       <form>
         First name:<br>
-  <input type="text" name="firstname" value="Mickey"><br>
+  <input type="text" name="username" value="FirstName"><br>
   Last name:<br>
-  <input type="text" name="lastname" value="Mouse"><br><br>
+  <input type="text" name="password" value="LastName"><br><br>
   <input type="submit" value="Submit">
 </form>
     </body>
