--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
   <input type="text" name="password" value="LastName"><br><br>
   <input type="submit" value="Submit">
 </form>
+      <h2><a href="https://www.khanacademy.org/computer-programming/my-blog/6588582223052800">My blog</a></h2><script src="https://www.khanacademy.org/computer-programming/my-blog/6588582223052800/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
     </body>
 </html>
